syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/a-light-win/pg-helper/pkg/proto";

package proto;

service DbJobSvc {
  // Register a new agent to the manager
  // and the manager will send tasks to the agent if needed.
  rpc Register(RegisterInstance) returns (stream DbJob) {}
  // Agent will call this method to notify the manager
  // that the task status has been updated.
  rpc NotifyDbStatus(Database) returns (google.protobuf.Empty) {}
}

message RegisterInstance {
  // Instance name
  string name = 1;
  // The major version of the pg instance.
  int32 pg_version = 2;
  // The databases served by this pg version
  repeated Database databases = 3;
  // The namespace of the pg instance.
  // TODO: We may need to support namespace in the future.
  string namespace = 4;
}

message Database {
  // The name of the database.
  string name = 1;
  string owner = 2;
  // Migrate database from this pg instance
  string migrate_from = 3;
  // Migrate database to this pg instance
  string migrate_to = 4;
  DbStage stage = 5;
  DbStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp expired_at = 9;

  string instance_name = 10;
  string error_msg = 11;
  string last_job_id = 12;
}

enum DbStatus {
  Processing = 0;
  Done = 1;
  Failed = 2;
}

enum DbStage {
  // The database is not in any stage.
  None = 0;
  CreateUser = 1;
  CreateDatabase = 2;
  BackupDatabase = 3;
  RestoreDatabase = 4;
  ReadyToUse = 5;
  Idle = 6;
  DropDatabase = 7;
}

message DbJob {
  string job_id = 1;
  oneof job {
    CreateDatabaseJob create_database = 4;
    MigrateOutDatabaseJob migrate_out_database = 5;
    RollbackDatabaseJob rollback_database = 6;
    DropDatabaseJob drop_database = 7;
  }
}

// Create and migrate a database to the new pg version.
message CreateDatabaseJob {
  string name = 1;
  string reason = 2;
  string owner = 3;
  string password = 4;
  string migrate_from = 5;
  string backup_path = 6;
}

// Notify the agent the database is  migrating to another pg instance,
// and the agent should change the stage to idle.
message MigrateOutDatabaseJob {
  string name = 1;
  string reason = 2;
  string migrate_to = 3;
  google.protobuf.Timestamp expired_at = 4;
}

message RollbackDatabaseJob { string name = 1; }

message DropDatabaseJob { string name = 1; }
